# Binary-Brains---Inspectron

./: .breakpoints  .replit  README.md  app.py  pyproject.toml  replit_zip_error_log.txt  report (copy).py  upload (copy).py
pages/: mainpage.py  requirements.txt
pages/data/: analyses.json
utils/: analysis_utils.py  email_utils.py  pdf_utils.py
