[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "django-page-cms>=2.0.11",
    "fpdf==1.7.2",
    "google-generativeai==0.8.3",
    "google==3.0.0",
    "ibm-watsonx-ai==1.1.22",
    "openai==1.54.3",
    "streamlit==1.40.0",
]
